# sfml-game-idk

./: .gitmodules  CMakeLists.txt
.cache/clangd/index/: App.hpp.449F624EB6973B3F.idx  App_inl.hpp.5856DFE0596F658A.idx  Argv.hpp.0BEA58D8B929DE46.idx  Argv_inl.hpp.C107592C63E5FB60.idx  CLI.hpp.98086F64ED1C244B.idx  Config.hpp.E41B6CA353974EC9.idx  ConfigFwd.hpp.F97D32820C355B74.idx  Config_inl.hpp.A945AE319C282788.idx  Encoding.hpp.0113409DEB88EA59.idx  Encoding_inl.hpp.A6390B17C2A23A2F.idx  Error.hpp.E39C498E453FC432.idx  Formatter.hpp.AEDA2B38E3A489D5.idx  FormatterFwd.hpp.40170E71857C7E1E.idx  Formatter_inl.hpp.0C7D791A95148474.idx  Macros.hpp.70500BA72A7B3FDD.idx  Option.hpp.1250F10B309ACAE4.idx  Option_inl.hpp.CD797DB91ED6095A.idx  Split.hpp.3545ADE508024FE4.idx  Split_inl.hpp.6146A623890343AE.idx  StringTools.hpp.DD76F001FBBD6051.idx  StringTools_inl.hpp.56313DE1666CD508.idx  TypeTools.hpp.C5F152DD008FB661.idx  Validators.hpp.842DC5DADCE9A1C0.idx  Validators_inl.hpp.70A58EBAFB0F21C3.idx  Version.hpp.6E577454323F2954.idx  ansicolor_sink-inl.h.2739AC8D105F3080.idx  ansicolor_sink.h.77E8B78250AF62EB.idx  async.cpp.6DDA4D7D15055EB8.idx  async.h.912B48B3D0D2FFE2.idx  async_logger-inl.h.0261658851BEE695.idx  async_logger.h.E1DAB53151E3C5CF.idx  backtracer-inl.h.216C35D4FBDB7F6A.idx  backtracer.h.AE1480772791D415.idx  base.h.0A7E231EBB3A311C.idx  base_sink-inl.h.1346B96F5C3E0BB3.idx  base_sink.h.02D06B47382F8B80.idx  basic_file_sink-inl.h.C99E6470182D0538.idx  basic_file_sink.h.5DFCFE074CBB7BE3.idx  bundled_fmtlib_format.cpp.8761EB7A5DF837F8.idx  cfg.cpp.8589106C6F4E5E87.idx  (+62 more)
include/: event_bus.h  game.h  game_screen.h  screen.h  title_screen.h
src/: game.cpp  main.cpp
tests/: CMakeLists.txt
